# web/swagger.yaml
@@ -441,6 +441,8 @@ definitions:
         type: boolean
       isShared:
         type: boolean
+      isPinned:
+        type: boolean
       commentCount:
         type: integer
       favoriteCount:
@@ -457,6 +459,8 @@ definitions:
           edit:
             type: boolean
           delete:
+            type: boolean
+          pin:
             type: boolean
           comment:
             type: boolean
@@ -572,6 +576,15 @@ definitions:
         format: int64
         minimum: 1
       isWatching:
+        type: boolean
+  PinStatus:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+        minimum: 1
+      isPinned:
         type: boolean
   Relationship:
     type: object
@@ -3201,6 +3214,62 @@ paths:
           description: Adjacent entries
           schema:
             $ref: '#/definitions/AdjacentEntries'
+        404:
+          description: Entry not found
+          schema:
+            $ref: '#/definitions/Error'
+  /entries/{id}/pin:
+    parameters:
+      - $ref: '#/parameters/pathId'
+    get:
+      security:
+        - OAuth2Password: [ ]
+        - OAuth2Code: [ "entries:read" ]
+      tags:
+        - entries
+      responses:
+        200:
+          description: pin status
+          schema:
+            $ref: '#/definitions/PinStatus'
+        404:
+          description: Entry not found
+          schema:
+            $ref: '#/definitions/Error'
+    put:
+      security:
+        - OAuth2Password: [ ]
+        - OAuth2Code: [ "entries:write" ]
+      tags:
+        - entries
+      responses:
+        200:
+          description: pin status
+          schema:
+            $ref: '#/definitions/PinStatus'
+        403:
+          description: access denied
+          schema:
+            $ref: '#/definitions/Error'
+        404:
+          description: Entry not found
+          schema:
+            $ref: '#/definitions/Error'
+    delete:
+      security:
+        - OAuth2Password: [ ]
+        - OAuth2Code: [ "entries:write" ]
+      tags:
+        - entries
+      responses:
+        200:
+          description: pin status
+          schema:
+            $ref: '#/definitions/PinStatus'
+        403:
+          description: access denied
+          schema:
+            $ref: '#/definitions/Error'
         404:
           description: Entry not found
           schema:
